Add LoRaWAN adapter build profile
Signed-off-by: Bob Claerhout <claerhout.bob@gmail.com>